// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbSwitcherPopover render loading state 1`] = `
<Popover
  bsClass="popover"
  className="breadcrumb-switcher-popover"
  id="some-id"
  placement="right"
>
  <SearchInput
    focus={true}
    onClear={[Function]}
    onSearchChange={[Function]}
    searchValue=""
    timeout={300}
  />
  <div
    className="breadcrumb-switcher-popover-loading text-center"
  >
    <Icon
      name="spinner"
      size="lg"
      spin={true}
      type="fa"
    />
  </div>
</Popover>
`;

exports[`BreadcrumbSwitcherPopover render resources list 1`] = `
<Popover
  bsClass="popover"
  className="breadcrumb-switcher-popover"
  id="some-id"
  placement="right"
>
  <SearchInput
    focus={true}
    onClear={[Function]}
    onSearchChange={[Function]}
    searchValue=""
    timeout={300}
  />
  <ListGroup
    bsClass="list-group"
    className="scrollable-list"
  >
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="1-Host 1"
      key="1-Host 1"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 1
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="2-Host 2"
      key="2-Host 2"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 2
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="3-Host 3 with a very long name"
      key="3-Host 3 with a very long name"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 3 with a very long name
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      id="4-Host 4"
      key="4-Host 4"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 4
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="5-Host 5"
      key="5-Host 5"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 5
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
  </ListGroup>
  <Pager
    baseClassName="content-view-pf-pagination"
    className="pager-sm"
    disableNext={true}
    disablePrevious={true}
    messages={
      Object {
        "nextPage": "",
        "previousPage": "",
      }
    }
    onNextPage={[Function]}
    onPreviousPage={[Function]}
  />
</Popover>
`;

exports[`BreadcrumbSwitcherPopover render resources list with a search query 1`] = `
<Popover
  bsClass="popover"
  className="breadcrumb-switcher-popover"
  id="some-id"
  placement="right"
>
  <SearchInput
    focus={true}
    onClear={[Function]}
    onSearchChange={[Function]}
    searchValue=""
    timeout={300}
  />
  <ListGroup
    bsClass="list-group"
    className="scrollable-list"
  >
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="1-Host 1"
      key="1-Host 1"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 1
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="2-Host 2"
      key="2-Host 2"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 2
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="3-Host 3 with a very long name"
      key="3-Host 3 with a very long name"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 3 with a very long name
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      id="4-Host 4"
      key="4-Host 4"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 4
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="5-Host 5"
      key="5-Host 5"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 5
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
  </ListGroup>
  <Pager
    baseClassName="content-view-pf-pagination"
    className="pager-sm"
    disableNext={true}
    disablePrevious={true}
    messages={
      Object {
        "nextPage": "",
        "previousPage": "",
      }
    }
    onNextPage={[Function]}
    onPreviousPage={[Function]}
  />
</Popover>
`;

exports[`BreadcrumbSwitcherPopover render resources list with pagination 1`] = `
<Popover
  bsClass="popover"
  className="breadcrumb-switcher-popover"
  id="some-id"
  placement="right"
>
  <SearchInput
    focus={true}
    onClear={[Function]}
    onSearchChange={[Function]}
    searchValue=""
    timeout={300}
  />
  <ListGroup
    bsClass="list-group"
    className="scrollable-list"
  >
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="1-Host 1"
      key="1-Host 1"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 1
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="2-Host 2"
      key="2-Host 2"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 2
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="3-Host 3 with a very long name"
      key="3-Host 3 with a very long name"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 3 with a very long name
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      id="4-Host 4"
      key="4-Host 4"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 4
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
    <ListGroupItem
      active={false}
      bsClass="list-group-item"
      className="no-border"
      href="#"
      id="5-Host 5"
      key="5-Host 5"
      listItem={false}
      onClick={[Function]}
    >
      <EllipisWithTooltip>
        <SubstringWrapper
          Element="b"
          substring=""
        >
          Host 5
        </SubstringWrapper>
      </EllipisWithTooltip>
    </ListGroupItem>
  </ListGroup>
  <Pager
    baseClassName="content-view-pf-pagination"
    className="pager-sm"
    disableNext={false}
    disablePrevious={false}
    messages={
      Object {
        "nextPage": "",
        "previousPage": "",
      }
    }
    onNextPage={[Function]}
    onPreviousPage={[Function]}
  />
</Popover>
`;
